<resources>
    <string name="app_name">RickAndMorty</string>

    <!-- item_character -->
    <string name="defaultCharacterName">Character name</string>
    <string name="defaultSpecies">Human</string>
    <string name="defaultStatus">Alive</string>

    <!-- Errors -->
    <string name="error_not_found">No se encontró el recurso</string>
    <string name="error_internal_server">Error del servidor</string>
    <string name="error_generic">Ha ocurrido un error inesperado</string>
    <string name="error_internet_connection">Error de conexión a internet</string>

    <!-- detail_activity -->
    <string name="detail_status">Status:</string>
    <string name="detail_species">Species:</string>
    <string name="detail_type">Type:</string>
    <string name="detail_gender">Gender:</string>
    <string name="detail_location">Location:</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="changes_saved">Cambios guardados</string>
    <string name="character_deleted">Personaje borrado</string>

</resources>