<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainActivity">

    <data>
        <variable
            name="character"
            type="com.example.rickandmorty.data.model.Character" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:clickable="true"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardBackgroundColor="@color/white"
        android:elevation="@dimen/card_elevation"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_character"
                android:layout_width="@dimen/image_character"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:src="@drawable/ic_person"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@{character.name}"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_character"
                app:layout_constraintTop_toTopOf="@id/image_character"
                tools:text="@string/defaultCharacterName" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@{character.status}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_character"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                tools:text="@string/defaultStatus" />

            <TextView
                android:id="@+id/text_species"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@{character.species}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_character"
                app:layout_constraintTop_toBottomOf="@id/text_status"
                tools:text="@string/defaultSpecies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>